--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </tr>
     <tr>
       <td>2021</td>
-      <td>developing of ethnicwear</td>
+      <td>developing ethnicwear (persent)</td>
     </tr>
   </table>
 
